bug 底部保存样式

--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -105,6 +105,7 @@ body {
 
 .xui-wepage-globalNavPage .xui-bottomActionBar,.xui-wepage-workbenchPage .xui-bottomActionBar{
 	position: absolute;
+	width: 995px;
 }
 
 
