bug 底部导航保存条

--- a/weapp/termite2/templates/termite2/global_navbar_editor.html
+++ b/weapp/termite2/templates/termite2/global_navbar_editor.html
@@ -12,7 +12,7 @@
 		</ul>
 	</div>
 
-	<div style="background-color: #EAEEF7;" class="clearfix pr">
+	<div style="background-color: #EAEEF7;padding-bottom:60px;" class="clearfix pr">
 		<div class="xui-navbarHeader">
 			<div class="xui-title mb15">店铺导航</div>
 			<div class="f14">
