--- a/weapp/termite2/templates/termite2/workbench.html
+++ b/weapp/termite2/templates/termite2/workbench.html
@@ -13,7 +13,7 @@
     </ul>
   </div>
 
-  <div style="background-color: #EAEEF7;" class="clearfix pr">
+  <div style="background-color: #EAEEF7; padding-bottom:70px;" class="clearfix pr">
     <div id="leftPanel" class="fl xui-workbench-leftPanel xui-hide">
     </div>
     
