--- a/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
+++ b/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
@@ -123,10 +123,16 @@
         };
     </script>
     <script type="text/javascript">
-        var lottery_status;
+        var lottery_status, can_play_count;
         window.lottery = {};//测试用
+
         $(function(){
+            //隐藏参与活动按钮
+            $('.xa-submitButtonContainer').hide();
+            //TODO 发起请求获取中奖历史和剩余积分
+
             lottery_status = '{{ lottery_status }}' == 'True' ? true : false;
+            can_play_count = parseInt('{{ can_play_count }}');
             var $container = $('.wui-lotterydescription').find('.wui-i-body');
             window.lottery = new Roulette($container);
             $(".xa-lottery-go").click(function(){
@@ -142,6 +148,8 @@
                             webapp_owner_id: W.webappOwnerId
                         },
                         success: function(data){
+                            can_play_count = data.can_play_count;
+                            $frameDoc.find('.wui-lotterydescription .xa-header p>b').html(can_play_count);
                             lottery.roll();
                             lottery.stop(data.result);
                             console.log('抽奖结束');
