--- a/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
+++ b/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
@@ -113,7 +113,14 @@
             });
         });
         $('.xa-toUserCenter').on('click', function(event) {
-            redirectTo('/termite/workbench/jqm/preview/?module=user_center&model=user_info&action=get&workspace_id=mall&webapp_owner_id='+W.webappOwnerId);
+            if (W.memberId){
+                redirectTo('/termite/workbench/jqm/preview/?module=user_center&model=user_info&action=get&workspace_id=mall&webapp_owner_id='+W.webappOwnerId);
+            }
+            else{
+                $('body').html('<div class="wui-appParticipantResult-Cover"><div class="wui-qrcode">' +
+                '<img height="195px" width="195px" src="{% if auth_appid_info %}{{auth_appid_info.qrcode_url}}{% endif %}">' +
+                '</div><div></div>');
+            }
         });
     });
     </script>
