--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -215,6 +215,7 @@
             W.activityStatus = "{{activity_status}}";
             W.isPC = {% if isPC %}true{% else %}false{% endif %};
             W.isMember = {% if isMember %}true{% else %}false{% endif %};
+            W.qrcodeUrl = "{{ auth_appid_info.qrcode_url }}"
             if(W.sharePageImg.substr(0,7)!="http://" && W.sharePageImg.substr(0,8)!="https://")
             W.sharePageImg = "http://"+window.location.host+W.sharePageImg;
             var link = window.location.href;
