所有导出统一加入loading

--- a/weapp/apps/customerized_apps/event/templates/editor/event_participances.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/event_participances.html
@@ -170,6 +170,7 @@ $(document).ready(function() {
 
     //export
     $('.xa-export').click(function(event){
+        W.getLoadingView();
         var export_id =window.location.search.split('?id=')[1];
         W.getApi().call({
             method: 'get',
