--- a/weapp/apps/customerized_apps/vote/templates/editor/vote_participances.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/vote_participances.html
@@ -169,6 +169,7 @@ $(document).ready(function() {
 
     //export
     $('.xa-export').click(function(event){
+        W.getLoadingView();
         var export_id =window.location.search.split('?id=')[1];
         W.getApi().call({
             method: 'get',
