--- a/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
+++ b/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
@@ -5,29 +5,59 @@
 	h1 {
 		color: #00F;
 	}
-	.xui-record {
-		margin: 10px 15px;
-		padding: 5px;
-		box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-		border-radius: 5px;
-	}
+
 	.xui-record .xui-inner-content {
 		color: #8F8F8F;
 	}
-	a.xui-button {
-		padding: 10px;
-		display: block;
-		text-align: center;
-		color: #FFF;
-		margin: 10px 15px;
-		background-color: rgba(0, 125, 255, 0.5);
-		border-radius: 10px;
-	}
+
+    .wui-mask{
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: none;
+        opacity: 0.8 !important;
+        background: black;
+        height: 100%;
+        width: 100%;
+    }
+
+    .wui-resultDialog{
+        background: url("/termite_static/img/component/lottery/roulette_mobile_dialog_bg.png") no-repeat;
+        display: none;
+        position: fixed;
+        top: 20%;
+        left: 10%;
+        width: 80%;
+        height: 250px;
+        border-radius: 5px;
+        z-index: 1;
+    }
+    .wui-resultDialog>.wui-i-title{
+        background: url("/termite_static/img/component/lottery/roulette_mobile_dialog_title_icon.png") no-repeat;
+
+    }
+    .wui-resultDialog>.wui-i-close{
+        background: red;
+    }
 </style>
 {% endblock %}
 
 {% block content-panel %}
     {{ page_html_content|safe }}
+    <div id="resultDialog" class="wui-resultDialog">
+        <i class="wui-i-close xa-closeDialog">&#10005</i>
+        <h2 class="wui-i-title"></h2>
+        <h3 class="wui-i-subTitle"></h3>
+        <div class="wui-i-content"></div>
+        <div class="wui-i-bottom">
+            <a class="ui-btn wui-i-btnup">
+                <span class="ui-btn-text">个人中心</span>
+            </a>
+            <a class="ui-btn wui-i-btndown">
+                <span class="ui-btn-text">关闭</span>
+            </a>
+        </div>
+    </div>
 {% endblock %}
 
 {% block js %}
@@ -41,6 +71,7 @@
             this.cycle = 50;
             this.prize = -1;
             this.prize_name = "谢谢参与";
+            this.prize_type = 'no_prize';
             this.isRolling = false;
             this.light_index = -1;
             this.light_count = 0;
@@ -49,7 +80,7 @@
             this.$lottery = $lottery;
             this.PRIZE = {
                 '谢谢参与': getRandomStopPosition(['1', '5', '8', '10']), //谢谢参与位置
-                '一等奖': getRandomStopPosition(['1', '7']), //一等奖位置
+                '一等奖': getRandomStopPosition(['0', '7']), //一等奖位置
                 '二等奖': getRandomStopPosition(['2', '4', '9']), //二等奖位置
                 '三等奖': getRandomStopPosition(['3', '6', '11']) //三等奖位置
             };
@@ -69,13 +100,17 @@
                 alert('没有找到容器');
                 return void(0);
             }
+            //初始化result dialog
+            this.$dialog = $('#resultDialog');
+            var $body = $('body');
+           $body.append($('<div class="wui-mask"></div>'));
         }
         Roulette.prototype.move = function(){
             //lottery
             var $lottery = this.$lottery;
             $lottery.find(".xa-lottery-unit-"+this.index).removeClass("active");
             this.index++;
-            if(this.index>this.count){
+            if(this.index>=this.count){
                 this.index = 0;
                 this.times ++;
             }
@@ -90,9 +125,10 @@
             $lottery.find(".xa-circle-unit-"+light_index).addClass("active");
             this.light_index = light_index;
         };
-        Roulette.prototype.stop = function(result){
-            this.prize_name = result;
-            var index = this.PRIZE[result];
+        Roulette.prototype.stop = function(data){
+            this.prize_type = data.prize_type;
+            this.prize_name = data.result;
+            var index = this.PRIZE[data.result];
             this.prize = parseInt(index);
         };
         Roulette.prototype.roll = function(){
@@ -118,8 +154,15 @@
                 that.roll();
             },this.speed);
         };
-        Roulette.prototype.popupResult = function(){
-            alert(this.prize_name);
+        Roulette.prototype.popupResult = function(action){
+            if(action){
+                if(this.prize_type == 'entity'){
+                    //实物
+
+                }
+            }
+            this.$dialog.show();
+            $('.wui-mask').show();
         };
     </script>
     <script type="text/javascript">
@@ -151,7 +194,7 @@
                             can_play_count = data.can_play_count;
                             $frameDoc.find('.wui-lotterydescription .xa-header p>b').html(can_play_count);
                             lottery.roll();
-                            lottery.stop(data.result);
+                            lottery.stop(data);
                             console.log('抽奖结束');
                         },
                         error: function(error){
