--- a/weapp/market_tools/tools/activity/templates/activity/webapp/my_activities.html
+++ b/weapp/market_tools/tools/activity/templates/activity/webapp/my_activities.html
@@ -26,22 +26,26 @@
     a:link,a:hover,a:visited{
         color:#333;
     }
-    .wui-my_activities_event,.wui-my_activities_survey,.wui-my_activities_vote{
+    .wui-my_activities_event,.wui-my_activities_survey,.wui-my_activities_vote,.wui-my_activities_lottery{
         background: url(/static_v2/img/userCenterMyActivitiesSprite.png) no-repeat;
-        background-size: 100px 30px;
+        background-size: 135px 30px;
         display: block;
         height: 30px;
-        width: 36px;
+        width: 32px;
         float: left;
     }
     .wui-my_activities_event {
-      background-position: -30px 0;
+        background-position: -30px 0;
+        width: 35px;
     }
     .wui-my_activities_vote {
-      background-position: -66px 0;
+      background-position: -68px 0;
     }
     .wui-my_activities_survey {
-      background-position: 2px 0;
+      background-position: 4px 0;
+    }
+    .wui-my_activities_lottery {
+      background-position: -100px 0;
     }
     .xui-i-title .disTc {
       font-size: 18px;
@@ -105,62 +109,17 @@
                     {% endif %}
                 </div>
                 <div class="wui-swiper-slide">
-                    {% if lotteres_items %}
-                    <ul class="xui-listItem">
-                        {% for lotteres_item in lotteres_items %}
-                        <li data-role="button" data-icon="true" class="xui-listInner pl10 pr15">
-                            <a href="{{ lotteres_item.url }}">
-                                    <div>
-                                        <span class="mr5 pl5 em1">{{ lotteres_item.prize_name }}</span>
-                                        <span class="c65 em1">
-                                            {% if lottery_record.prize_type == 1 %}
-                                            优惠劵{{lottery_record.prize_money}}元
-                                            {% endif %}
-                                            {% if lottery_record.prize_type == 2 %}
-                                            兑换码
-                                            {% endif %}
-                                            {% if lottery_record.prize_type == 3 %}
-                                            积分{{lottery_record.prize_source}}
-                                            {% endif %}
-                                            {% if lottery_record.prize_type == 0 %}
-                                            实物奖品{{lottery_record.prize_source}}
-                                            {% endif %}
-                                        </span>
-                                    </div>
-                                    <span class="mt5 em7 pl5 pr10 c9">
-                                        {% if lottery_record.is_awarded %}
-                                        领奖日期：{{ lottery_record.awarded_at|date:'Y.m.d' }}
-                                        {% else %}
-                                        编号：{{lottery_record.prize_number}}
-                                        {% endif %}
-                                    </span>
-                                    {% if lottery_record.prize_type == 1 %}
-                                    <span class="mt5 em7 pl5 c9">
-                                        {% if lottery_record.is_awarded %}
-                                        过期日期：{{promotion.end_date|date:"Y-m-j H:i:s"}}
-                                        {% else %}
-                                        编号：{{lottery_record.prize_number}}
-                                        {% endif %}
-                                    </span>
-                                    {% endif %}
-                                </span>
-                                {% if lottery_record.prize_type == 0 %}
-                                <span class="disTc vm em9">
-                                    {% if lottery_record.is_awarded %}
-                                        已领取
-                                    {% else %}
-                                        <span class="xui-text-green">未领取</span>
-                                    {% endif %}
-                                </span>
-                                {% endif %}
-                            </a>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                    {% else %}
-                    <div class="error-info">
-                    您还没有奖品
-                    </div>
+                    {% if lotteries_items %}
+                        {% for lotteries_item in lotteries_items %}
+                            <ul class="xui-listItem">
+                            <li data-icon="true" class="xui-listInner pl15 pr15">
+                                <div class="xui-i-title">
+                                  <i class="wui-my_activities_lottery"></i><span class="disTc pl15 em1">{{ lotteries_item.name }}</span>
+                                </div>
+                                <div class="xui-i-time">{{ lotteries_item.participant_time }}参加了抽奖</div>
+                            </li>
+                            </ul>
+                            {% endfor %}
                     {% endif %}
                 </div>
 {#                <div class="wui-swiper-slide">#}
