--- a/weapp/market_tools/tools/activity/templates/activity/webapp/my_activities.html
+++ b/weapp/market_tools/tools/activity/templates/activity/webapp/my_activities.html
@@ -42,7 +42,7 @@
       background-position: -68px 0;
     }
     .wui-my_activities_survey {
-      background-position: 4px 0;
+      background-position: 0 0;
     }
     .wui-my_activities_lottery {
       background-position: -100px 0;
@@ -70,61 +70,62 @@
         </div>
         <div class="wui-swiper-container" style="margin-top:47px;">
             <div class="wui-swiper-wrapper">
-                <div class="wui-swiper-slide">
-                    {% if events_items %}
-                        {% for events_item in events_items %}
-                            <ul class="xui-listItem">
-                            <li data-icon="true" class="xui-listInner pl10 pr15">
-                                <div class="xui-i-title">
-                                  <i class="wui-my_activities_event"></i><span class="disTc pl15 em1">{{ events_item.name }}</span>
-                                </div>
-                                <div class="xui-i-time">{{ events_item.participant_time }}参加了活动报名</div>
-                            </li>
-                            </ul>
-                        {% endfor %}
-                    {% endif %}
-                    {% if votes_items %}
-                        {% for votes_item in votes_items %}
-                            <ul class="xui-listItem">
-                            <li data-icon="true" class="xui-listInner pl15 pr15">
-                                <div class="xui-i-title">
-                                  <i class="wui-my_activities_vote"></i><span class="disTc pl15 em1">{{ votes_item.name }}</span>
-                                </div>
-                                <div class="xui-i-time">{{ votes_item.participant_time }}参加了微信投票</div>
-                            </li>
-                            </ul>
-                        {% endfor %}
-                    {% endif %}
-                    {% if surveies_items %}
-                        {% for surveies_item in surveies_items %}
-                            <ul class="xui-listItem">
-                            <li data-icon="true" class="xui-listInner pl15 pr15">
-                                <div class="xui-i-title">
-                                  <i class="wui-my_activities_survey"></i><span class="disTc pl15 em1">{{ surveies_item.name }}</span>
-                                </div>
-                                <div class="xui-i-time">{{ surveies_item.participant_time }}参加了用户调研</div>
-                            </li>
-                            </ul>
-                        {% endfor %}
-                    {% endif %}
-                </div>
-                <div class="wui-swiper-slide">
-                    {% if lotteries_items %}
-                        {% for lotteries_item in lotteries_items %}
-                            <ul class="xui-listItem">
-                            <li data-icon="true" class="xui-listInner pl15 pr15">
-                                <div class="xui-i-title">
-                                  <i class="wui-my_activities_lottery"></i><span class="disTc pl15 em1">{{ lotteries_item.name }}</span>
-                                </div>
-                                <div class="xui-i-time">{{ lotteries_item.participant_time }}参加了抽奖</div>
-                            </li>
-                            </ul>
+                <div class="wui-swiper-slide" id="xa-wrapper">
+                    <div class="wui-content-slide">
+                        {% if events_items %}
+                            {% for events_item in events_items %}
+                                <ul class="xui-listItem">
+                                <li data-icon="true" class="xui-listInner pl10 pr15">
+                                    <div class="xui-i-title">
+                                      <i class="wui-my_activities_event"></i><span class="disTc pl15 em1">{{ events_item.name }}</span>
+                                    </div>
+                                    <div class="xui-i-time">{{ events_item.participant_time }}参加了活动报名</div>
+                                </li>
+                                </ul>
                             {% endfor %}
-                    {% endif %}
+                        {% endif %}
+                        {% if votes_items %}
+                            {% for votes_item in votes_items %}
+                                <ul class="xui-listItem">
+                                <li data-icon="true" class="xui-listInner pl15 pr15">
+                                    <div class="xui-i-title">
+                                      <i class="wui-my_activities_vote"></i><span class="disTc pl15 em1">{{ votes_item.name }}</span>
+                                    </div>
+                                    <div class="xui-i-time">{{ votes_item.participant_time }}参加了微信投票</div>
+                                </li>
+                                </ul>
+                            {% endfor %}
+                        {% endif %}
+                        {% if surveies_items %}
+                            {% for surveies_item in surveies_items %}
+                                <ul class="xui-listItem">
+                                <li data-icon="true" class="xui-listInner pl15 pr15">
+                                    <div class="xui-i-title">
+                                      <i class="wui-my_activities_survey"></i><span class="disTc pl15 em1">{{ surveies_item.name }}</span>
+                                    </div>
+                                    <div class="xui-i-time">{{ surveies_item.participant_time }}参加了用户调研</div>
+                                </li>
+                                </ul>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
                 </div>
-{#                <div class="wui-swiper-slide">#}
-
-{#                </div>#}
+                <div class="wui-swiper-slide">
+                    <div class="wui-content-slide">
+                        {% if lotteries_items %}
+                            {% for lotteries_item in lotteries_items %}
+                                <ul class="xui-listItem">
+                                <li data-icon="true" class="xui-listInner pl15 pr15">
+                                    <div class="xui-i-title">
+                                      <i class="wui-my_activities_lottery"></i><span class="disTc pl15 em1">{{ lotteries_item.name }}</span>
+                                    </div>
+                                    <div class="xui-i-time">{{ lotteries_item.participant_time }}参加了抽奖</div>
+                                </li>
+                                </ul>
+                                {% endfor %}
+                        {% endif %}
+                    </div>
+                </div>
             </div>
         </div>
             
@@ -139,17 +140,20 @@
 {% block js %}
 <script src="/markettools_static/coupon/js/idangerous.swiper.js"></script>
 <script type="text/javascript">
+$(document).ready(function($) {
     var bodyWidth = window.document.body.clientWidth;
     var bodyHeight = window.document.body.clientHeight;
     var containerHeight = bodyHeight - 47;
     $(".wui-swiper-container").css({'height':containerHeight,'width': '100%' });
     $(".wui-swiper-slide").css('height', containerHeight );
-    // $("body").css('overflow-y', 'hidden');
+    $("body").css('overflow-y', 'hidden');
+    var myscroll = new iScroll('xa-wrapper',{hScrollbar:false});
     var tabsSwiper = new Swiper('.wui-swiper-container',{
         speed:500,
         onSlideChangeStart: function() {
             $(".wui-swiper-tabs .wui-inner-active").removeClass('wui-inner-active');
             $(".wui-swiper-tabs a").eq(tabsSwiper.activeIndex).addClass('wui-inner-active');
+            myscroll=new iScroll(tabsSwiper.activeSlide(),{hScrollbar:false});
         }
     });
     $(".wui-swiper-tabs a").on('touchstart mousedown',function(e){
@@ -157,6 +161,8 @@
         $(".wui-swiper-tabs .wui-inner-active").removeClass('wui-inner-active');
         $(this).addClass('wui-inner-active');
         tabsSwiper.swipeTo($(this).index());
+        myscroll=new iScroll(tabsSwiper.activeSlide(),{hScrollbar:false});
     });
+});
 </script>
 {% endblock %}
