--- a/weapp/apps/customerized_apps/vote/templates/editor/vote_participances.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/vote_participances.html
@@ -6,6 +6,10 @@
     	height: 60px;
     	width: 60px;
     }
+
+    td.xui-result_fr-i-td0{
+        min-width: 30%;
+    }
     </style>
 {% endblock %}
 {% block content-panel %}
