--- a/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
+++ b/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
@@ -29,17 +29,18 @@
         top: 20%;
         left: 5%;
         width: 90%;
-        height: 250px;
+        height: 235px;
         border-radius: 5px;
         z-index: 1;
     }
     .wui-resultDialog>.wui-i-header>.wui-i-title{
-        margin-top: 45px;
+        margin-top: 30px;
+        margin-left: 25px;
         font-size: 2em;
         font-weight: 600;
         overflow: visible;
         color: #d81c26;
-
+        visibility: hidden;
     }
     .wui-resultDialog>.wui-i-header>.wui-i-title:before{
         content: "";
@@ -63,12 +64,45 @@
         vertical-align: middle;
         line-height: 33px;
         font-size: 1.2rem;
-        cursor: pointer;
     }
     .wui-resultDialog>.wui-i-header, .wui-resultDialog>.wui-i-body, .wui-resultDialog>.wui-i-bottom{
         width: 100%;
-        height: 100%;
+        margin-bottom: 15px;
         text-align: center;
+    }
+    .wui-resultDialog .wui-i-contentHeader{
+        font-size: 1.2rem;
+        color: #454545;
+        margin: 5px 25px;
+    }
+
+    .wui-resultDialog .wui-i-content input{
+        line-height: 20px;
+        border: 0;
+        padding: 5px;
+        font-size: 1.1rem;
+        width: 45%;
+    }
+    .wui-resultDialog .wui-i-dialog-btn{
+        height: 31px;
+        background: #d81c26;
+        border: 0;
+        font-size: 1rem;
+        font-weight: bolder;
+        border-radius: 3px;
+        width: 110px;
+    }
+    .wui-resultDialog .wui-i-content button{
+        width: 70px;
+        color: white;
+        background: #d81c26;
+    }
+    .wui-resultDialog>.wui-i-bottom>.wui-i-userCenter{
+        color: white;
+    }
+    .wui-resultDialog>.wui-i-bottom>.wui-i-closeDialog{
+        color: #454545;
+        background: white;
     }
 </style>
 {% endblock %}
@@ -81,26 +115,97 @@
             <h2 class="wui-i-title xa-dialog-title">中奖了耶</h2>
         </div>
         <div class="wui-i-body xa-dialog-content">
-            <div class="wui-i-content">
+            <div class="wui-i-contentHeader xa-dialog-contentHeader"></div>
+            <div class="wui-i-content xa-entity-content" style="display: none">
                 <label>手机号
                     <input placeholder="请输入手机号码">
                 </label>
-                <button>提交</button>
+                <button class="wui-i-dialog-btn">提&nbsp;交</button>
             </div>
         </div>
         <div class="wui-i-bottom xa-dialog-bottom">
-            <a class="ui-btn wui-i-btnup">
-                <span class="ui-btn-text">个人中心</span>
-            </a>
-            <a class="ui-btn wui-i-btndown">
-                <span class="ui-btn-text">关闭</span>
-            </a>
+            <button class="wui-i-dialog-btn wui-i-userCenter xa-userCenter">个人中心</button>
+            <button class="wui-i-dialog-btn wui-i-closeDialog xa-closeDialog xa-closeBtn">关闭</button>
         </div>
     </div>
 {% endblock %}
 
 {% block js %}
     <script>
+        function ResultDialog(selector){
+            var that = this;
+            this.$el = $(selector || '#resultDialog');
+            this.$title = this.$el.find('.xa-dialog-title');
+            this.$contentHeader = this.$el.find('.xa-dialog-contentHeader');
+            this.$entityContent = this.$el.find('.xa-entity-content');
+            this.$entitySubmitBtn = this.$entityContent.find('button');
+            this.$userCenter = this.$el.find('.xa-userCenter');
+            this.$closeBtn = this.$el.find('.xa-closeBtn');
+
+            this.$entitySubmitBtn.on('click', function(){
+                 W.getApi().call({
+                        app: 'm/apps/lottery',
+                        resource: 'lottery_prize',
+                        method: 'post',
+                        args:{
+                            id: W.appRecordId,
+                            webapp_owner_id: W.webappOwnerId,
+                            tel: that.$entityContent.find('input').val().trim()
+                        },
+                        success: function(data){
+                            that.$title.css('visibility','hidden');
+                            that.$entityContent.hide();
+                            that.$contentHeader.html('工作人员会尽快与您联系，<br>请保持手机开机~');
+                            that.$closeBtn.text('再来一次');
+                        },
+                        error: function(error){
+                            alert('请重试~');
+                        }
+                    });
+            });
+            //初始化result dialog
+            this.$mask = $('<div class="wui-mask"></div>');
+            $('body').append(this.$mask);
+            this.$el.find('.xa-closeDialog').on('click',function(){
+                that.close();
+            });
+        }
+        /**
+         *
+         * @param options 'prize_type': 'entity','prize_name': 'iphone10'
+         */
+        ResultDialog.prototype.render = function(options){
+            var prize_type = options?options.prize_type||'timesout':'timesout';
+            this.$entityContent.hide();
+            this.$el.hide();
+            if(prize_type == 'entity'){
+                this.$title.css('visibility','visible');
+                this.$contentHeader.html("恭喜您获得了"+prize_name+'！');
+                this.$entityContent.show();
+            }else if(prize_type == 'no_prize'){
+                this.$title.html('很遗憾').css('visibility','visible');
+                this.$contentHeader.html("没有中奖，再接再厉吧~");
+                this.$closeBtn.text('再来一次');
+            }else if(prize_type == 'coupon' || prize_type == 'integral'){
+                var msg = prize_type == 'coupon' ? ('一张优惠券：'+prize_name): prize_name;
+                this.$contentHeader.html("恭喜您获得了"+msg+"！快去个人中心查看吧！");
+                this.$closeBtn.text('再来一次');
+            }else if(prize_type == 'gameover'){
+                this.$title.css('visibility','hidden');
+                this.$contentHeader.html("活动已经结束啦，<br>下次早点来哦~");
+                this.$closeBtn.text('关闭');
+            }else if(prize_type == 'timesout'){
+                this.$title.css('visibility','hidden');
+                this.$contentHeader.html("您今天的抽奖机会已经用完了，<br>明天再来吧~");
+            }
+            this.$mask.show();
+            this.$el.show();
+        };
+        ResultDialog.prototype.close = function(){
+            this.$mask.hide();
+            this.$el.hide();
+        };
+
         function Roulette($lottery){
             var that = this;
             this.index = -1;
@@ -110,8 +215,6 @@
             this.times = 0;
             this.cycle = 50;
             this.prize = -1;
-            this.prize_name = "谢谢参与";
-            this.prize_type = 'no_prize';
             this.isRolling = false;
             this.light_index = -1;
             this.light_count = 0;
@@ -140,17 +243,6 @@
                 alert('没有找到容器');
                 return void(0);
             }
-            //初始化result dialog
-            var $body = $('body');
-            this.$mask = $('<div class="wui-mask"></div>');
-            $body.append(this.$mask);
-
-            this.$dialog = $('#resultDialog');
-            this.$dialog.find('.xa-closeDialog').on('click',function(){
-                that.$mask.hide();
-                that.$dialog.hide();
-            });
-
         }
         Roulette.prototype.move = function(){
             //lottery
@@ -191,7 +283,11 @@
                     this.prize = -1;
                     this.speed = 100;
                     this.isRolling = false;
-                    this.popupResult();
+                    resultDialog = resultDialog || new ResultDialog();
+                    resultDialog.render({
+                        'prize_type': this.prize_type,
+                        'prize_name': this.prize_name
+                    });
                     return;
                 }
                 this.speed += 20;
@@ -201,24 +297,15 @@
                 that.roll();
             },this.speed);
         };
-        Roulette.prototype.popupResult = function(action){
-            if(action){
-                if(this.prize_type == 'entity'){
-                    //实物
-
-                }
-            }
-            this.$dialog.show();
-            $('.wui-mask').show();
-        };
     </script>
     <script type="text/javascript">
-        var lottery_status, can_play_count;
+        var lottery_status, can_play_count, resultDialog;
         window.lottery = {};//测试用
 
         $(function(){
             //隐藏参与活动按钮
             $('.xa-submitButtonContainer').hide();
+            resultDialog = new ResultDialog();
             //TODO 发起请求获取中奖历史和剩余积分
 
             lottery_status = '{{ lottery_status }}' == 'True' ? true : false;
@@ -227,6 +314,7 @@
             window.lottery = new Roulette($container);
             $(".xa-lottery-go").click(function(){
                 if(lottery.isRolling || !lottery_status){
+                    !lottery_status && resultDialog.render();
                     return false;
                 }else{
                     W.getApi().call({
