mod 百宝箱》分享红包 delete 促销 》红包

--- a/weapp/mall/templates/mall/editor/create_red_envelope_rule.html
+++ b/weapp/mall/templates/mall/editor/create_red_envelope_rule.html
@@ -86,8 +86,9 @@
 <div class="xui-editProductPage xui-create-redEnvelope-page">
 <ul class="breadcrumb">
     <li>您当前所在位置</li>
-    <li><a href="/mall2/flash_sale_list/">促销管理</a></li>
-    <li class="active">分享红包</li>
+    <li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
+    <li><a href="/apps/promotion/red_envelope_rule_list/">分享红包</a></li>
+    <li class="active">新建分享红包</li>
 </ul>
 <form class="form-horizontal xui-formPanel xa-form pt0 pr" method="post">
 
