--- a/weapp/mall/templates/mall/editor/red_envelope_rules.html
+++ b/weapp/mall/templates/mall/editor/red_envelope_rules.html
@@ -11,7 +11,7 @@
 <div class="relative">
     <ul class="breadcrumb">
         <li>您当前所在位置</li>
-        <li><a href="/mall2/flash_sale_list/">促销管理</a></li>
+        <li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
         <li class="active">分享红包</li>
     </ul>
 </div>
@@ -21,7 +21,7 @@
 <div class="panel panel-default mt20 xui-bigBoxbg">
 <div class="panel panel-default ml10 mr10 mb50 xui-wrapBox">
     <div class="panel-heading xui-headStyle clearfix">
-        <a href="/mall2/red_envelope_rule/" class="btn btn-success ml10 fr xui-btnSetting"><span class="xui-add-btn-icon">+</span>新建分享红包</a>
+        <a href="/apps/promotion/red_envelope_rule/" class="btn btn-success ml10 fr xui-btnSetting"><span class="xui-add-btn-icon">+</span>新建分享红包</a>
     </div>
     <div
         data-ui-role="advanced-table"
