--- a/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
+++ b/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
@@ -84,13 +84,13 @@
         width: 45%;
     }
     .wui-resultDialog .wui-i-dialog-btn{
-        height: 31px;
+        height: 35px;
         background: #d81c26;
         border: 0;
         font-size: 1rem;
         font-weight: bolder;
         border-radius: 3px;
-        width: 110px;
+        width: 150px;
     }
     .wui-resultDialog .wui-i-content button{
         width: 70px;
@@ -307,7 +307,7 @@
             $('.xa-submitButtonContainer').hide();
             resultDialog = new ResultDialog();
             //TODO 发起请求获取中奖历史和剩余积分
-
+{#            getHistory();#}
             lottery_status = '{{ lottery_status }}' == 'True' ? true : false;
             can_play_count = parseInt('{{ can_play_count }}');
             var $container = $('.wui-lotterydescription').find('.wui-i-body');
@@ -327,7 +327,8 @@
                         },
                         success: function(data){
                             can_play_count = data.can_play_count;
-                            $('.wui-lotterydescription .xa-header p>b').html(can_play_count);
+                            var last_times = parseInt($('.wui-lotterydescription .xa-header p>b').html());
+                            $('.wui-lotterydescription .xa-header p>b').html(--last_times);
                             lottery.roll();
                             lottery.stop(data);
                             console.log('抽奖结束');
@@ -339,6 +340,28 @@
                 }
             });
         });
+        function getHistory(){
+            W.getApi().call({
+                app: 'm/apps/lottery',
+                resource: 'lottery_prize',
+                method: 'get',
+                args:{
+                    id: W.appRecordId,
+                    webapp_owner_id: W.webappOwnerId
+                },
+                success: function(data){
+                    can_play_count = data.can_play_count;
+                    var last_times = parseInt($('.wui-lotterydescription .xa-header p>b').html());
+                    $('.wui-lotterydescription .xa-header p>b').html(--last_times);
+                    lottery.roll();
+                    lottery.stop(data);
+                    console.log('抽奖结束');
+                },
+                error: function(error){
+                    alert(error);
+                }
+            });
+        }
     </script>
 {% endblock %}
 
