--- a/weapp/mall/templates/mall/editor/red_envelope_rules.html
+++ b/weapp/mall/templates/mall/editor/red_envelope_rules.html
@@ -25,7 +25,7 @@
     </div>
     <div
         data-ui-role="advanced-table"
-        data-app="mall2"
+        data-app="apps/promotion"
         data-resource="red_envelope_rule_list"
         data-template-id="#red_envelope_rule_list_view"
         data-enable-paginator="true"
@@ -59,7 +59,7 @@
     <tbody>
         {{each(i, rule) items}}
         <tr class="h80" data-id="${ rule.id }">
-            <td class="tl pl20" ><a href="/mall2/red_envelope_rule/?id=${ rule.id }">${ rule.rule_name }</a></td>
+            <td class="tl pl20" ><a href="/apps/promotion/red_envelope_rule/?id=${ rule.id }">${ rule.rule_name }</a></td>
             <td width="154">
                 {{if rule.limit_time}}
                 永久
@@ -88,7 +88,7 @@
                     {{/if}}
                     <a href="javascript:void(0);" class="xa-delete">删除</a>
                 {{/if}}
-                <a href="/mall2/red_envelope_rule/?id=${ rule.id }">查看</a>
+                <a href="/apps/promotion/red_envelope_rule/?id=${ rule.id }">查看</a>
             </td>
         </tr>
         {{/each}}
@@ -124,7 +124,7 @@ $(document).ready(function() {
             var status = $td.data('status');
             var id = $td.parents('tr').data('id');
             W.getApi().call({
-                app: 'mall2',
+                app: 'apps/promotion',
                 resource: 'red_envelope_rule',
                 method: 'post',
                 args: {
@@ -165,7 +165,7 @@ $(document).ready(function() {
 
     function deleteRedEnvelope(id){
         W.getApi().call({
-            app: 'mall2',
+            app: 'apps/promotion',
             resource: 'red_envelope_rule',
             method: 'post',
             args: {
