--- a/weapp/apps/customerized_apps/lottery/templates/editor/lottery_participance.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/lottery_participance.html
@@ -1,5 +1,12 @@
 {% extends "content_base_v2.html" %}
-
+{% block css %}
+    <style>
+    .tl.pl25 img{
+    	height: 60px;
+    	width: 60px;
+    }
+    </style>
+{% endblock %}
 {% block content-panel %}
 <div class="xui-lotteryParticipanceFormPage xui-appPage-commonStyle">
 	<ul class="breadcrumb" style="margin-bottom:-12px;">
